codama-macros/tests/codama_attribute/error_directive/invalid_message.fail.rs
use codama_macros::codama;

#[codama(error(message = 42))]
pub struct TestInteger;

#[codama(error(message = foo(bar)))]
pub struct TestMeta;

fn main() {}
